# cyber-risk

./: AGENTS_README.md  README.md  package-lock.json  package.json  tsconfig.json
agents/copilotkit/agent/: langgraph.json  pyproject.toml
agents/copilotkit/agent/demo/: langgraph_server.py
agents/copilotkit/agent/demo/langgraph_agentic_chat/: agent.py
agents/copilotkit/agent/demo/langgraph_agentic_generative_ui/: agent.py
agents/copilotkit/agent/demo/langgraph_cyber_risk/: agent.py
agents/copilotkit/agent/demo/langgraph_human_in_the_loop/: agent.py
agents/copilotkit/agent/demo/langgraph_no_chat/: agent.py
agents/copilotkit/agent/demo/langgraph_predictive_state_updates/: agent.py
agents/copilotkit/agent/demo/langgraph_shared_state/: agent.py
agents/copilotkit/agent/demo/langgraph_stepcharts_proposal/: agent.py
agents/copilotkit/agent/demo/langgraph_tool_based_generative_ui/: agent.py
backend/src/: copilotkitRouter.ts  db.ts  nvdService.ts  risk.ts  server.ts  types.ts
backend/src/copilotkit-agent-runner/: index.ts
backend/src/copilotkit-agent-runner/events/: custom-events.ts
backend/src/copilotkit-agent-runner/runner/: types.ts
backend/src/copilotkit-agent-runner/utils/: create-isolated-agent.ts  message-transformer.ts
backend/tests/: risk.test.ts
docs/: nvd-api.md  spec.md
docs/nextjs/: .env.example  README.md  package.json
docs/nextjs/docs/: history.md  troubleshooting.md
frontend/: index.html  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/hooks/: useCyberRiskThreadIds.ts
scripts/: syncNvdToSupabase.ts
(+15 files in other folders)
