[tool.poetry]
name = "agent"
version = "0.1.0"
description = ""
authors = ["CopilotKit"]
readme = "README.md"
packages = [{include = "demo"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
# 0.1.83+ supports langgraph 1.0.x (required by langgraph-api 0.7.x + langgraph-sdk 0.3.x)
copilotkit = "^0.1.83"
langchain = "^1.2.0"
langchain-core = "^1.2.0"
langchain-openai = "^1.0.0"
# langgraph-api 0.7.x is incompatible with langgraph 0.4.x (MISSING / grpc_common _compat)
langgraph = ">=1.0.0,<1.1.0"
langsmith = "^0.7.0"
openai = "^1.68.2"
fastapi = ">=0.128.0,<1.0.0"
uvicorn = "^0.29.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.langgraph.dependencies]
langgraph-api = "0.7.86"
langgraph-cli = { version = "0.4.19", extras = ["inmem"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
langgraph_server = "demo.langgraph_server:main"
crew_server = "demo.crew_server:main"
